<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bMean"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/menu_mean_blur" />

        <Button
            android:id="@+id/bGaussian"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/menu_gaussain_blur" />

        <Button
            android:id="@+id/bMedian"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/menu_median_blur" />

        <Button
            android:id="@+id/bSharpen"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/menu_sharpen_image" />

        <Button
            android:id="@+id/bDilate"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/menu_dilate_image" />

        <Button
            android:id="@+id/bErode"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/menu_erode_image" />

        <Button
            android:id="@+id/bThreshold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/menu_threshold_image" />

        <Button
            android:id="@+id/bAdaptiveThreshold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/menu_adaptive_threshold" />
    </LinearLayout>
</ScrollView>
